conteudo home page e colunas

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "app-miseria",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Site Miséria",
+  "homepage": "https://miseria.com.br/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -52,5 +52,5 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "Site Miséria"
 }
